// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCliOpts Socket repl throws errors if you give it a port object that isn't a number 1`] = `
Array [
  Array [
    "Error: Port should be > 0 and < 65536. Received NaN.
",
  ],
]
`;

exports[`getCliOpts Socket repl throws errors if you give it a port string that isn't a number 1`] = `
Array [
  Array [
    "Error: Port should be > 0 and < 65536. Received NaN.
",
  ],
]
`;

exports[`getCliOpts Socket repl throws errors if you give it an empty object 1`] = `
Array [
  Array [
    "Error: Port should be > 0 and < 65536. Received NaN.
",
  ],
]
`;

exports[`getCliOpts Socket repl throws errors if you give it an empty string 1`] = `
Array [
  Array [
    "option requires an argument -- n
",
  ],
]
`;

exports[`getCliOpts Socket repl throws errors if you give it invalid JSON 1`] = `
Array [
  Array [
    "Error: Unexpected token p in JSON at position 1
",
  ],
]
`;

exports[`getCliOpts Socket repl throws errors if you give it just a host object 1`] = `
Array [
  Array [
    "Error: Port should be > 0 and < 65536. Received NaN.
",
  ],
]
`;

exports[`getCliOpts Socket repl throws errors if you give it just a host string 1`] = `
Array [
  Array [
    "Error: Port should be > 0 and < 65536. Received NaN.
",
  ],
]
`;

exports[`getCliOpts with mocked CLJS produces an error when an option is not given to -k / --cache 1`] = `
Array [
  Array [
    "option requires an argument -- k
",
  ],
]
`;

exports[`print Functions printBanner prints socket REPL info in addition to the banner if -n specified 1`] = `
Array [
  Array [
    "Lumo X.X.X
ClojureScript clojurescript-version
Node.js X.X.X
 Docs: (doc function-name-here)
       (find-doc \\"part-of-name-here\\")
 Source: (source function-name-here)
 Exit: Control+D or :cljs/quit or exit

",
  ],
  Array [
    "Lumo socket REPL listening at localhost:5555.
",
  ],
]
`;

exports[`print Functions printBanner should print the banner to stdout 1`] = `
Array [
  Array [
    "Lumo X.X.X
ClojureScript clojurescript-version
Node.js X.X.X
 Docs: (doc function-name-here)
       (find-doc \\"part-of-name-here\\")
 Source: (source function-name-here)
 Exit: Control+D or :cljs/quit or exit

",
  ],
]
`;

exports[`print Functions printHelp should print the help text to stdout 1`] = `
Array [
  Array [
    "Lumo X.X.X
Usage:  lumo [init-opt*] [main-opt] [arg*]

  With no options or args, runs an interactive Read-Eval-Print Loop

  init options:
    -i, --init path              Load a file or resource
    -e, --eval string            Evaluate expressions in string; print
                                 non-nil values
    -c cp, --classpath cp        Use colon-delimited cp (semi-colon-delimited on
                                 Windows) for source directories and JARs
    -D dep, --dependencies dep   Use comma-separated list of dependencies to
                                 look for in the local Maven repository.
                                 Dependencies should be specified in the form
                                 \`SYM:VERSION\` (e.g.: foo/bar:1.2.3).
    -L path, --local-repo path   Path to the local Maven repository where Lumo
                                 will look for dependencies. Defaults to
                                 \`~/.m2/repository\`.
    -K, --auto-cache             Create and use .lumo_cache dir for cache
    -k, --cache path             If dir exists at path, use it for cache
    -q, --quiet                  Quiet mode; doesn't print the banner
    -v, --verbose                Emit verbose diagnostic output
    -d, --dumb-terminal          Disable line editing / VT100 terminal
                                 control
    -s, --static-fns             Generate static dispatch function calls
    -f, --fn-invoke-direct       Do not not generate \`.call(null...)\` calls
                                 for unknown functions, but instead direct
                                 invokes via \`f(a0,a1...)\`.
    -A x, --checked-arrays x     Enables checked arrays where x is either warn
                                 or error.
    -n opts, --socket-repl x     Enable a socket REPL where x is port, IP:port
                                 or JSON of the following form, where port is
                                 required:
                                 {\\"host\\":   \\"localhost\\",
                                  \\"port\\":   12345,
                                  \\"accept\\": \\"some.namespaced.clojure/fn\\",
                                  \\"args\\":   [\\"args\\", {\\"for\\": \\"the accept fn\\"}]}

  main options:
    -m ns-name, --main=ns-name   Call the -main function from a namespace
                                 with args
    -r, --repl                   Run a repl
    path                         Run a script from a file or resource
    -                            Run a script from standard input
    -h, -?, --help               Print this help message and exit
    -l, --legal                  Show legal info (licenses and copyrights)

  The init options may be repeated and mixed freely, but must appear before
  any main option.

  Paths may be absolute or relative in the filesystem.
",
  ],
]
`;

exports[`print Functions printLegal should print the legal information to stdout 1`] = `
Array [
  Array [
    "
Lumo
----

Copyright (c) 2016-2017 António Nuno Monteiro
Distributed under the Eclipse Public License either version 1.0 or (at your
option) any later version.


Lumo may use the following copyrighted software, which use is hereby
acknowledged.


ClojureScript
-------------

Copyright (c) Rich Hickey. All rights reserved. The use and
distribution terms for this software are covered by the Eclipse
Public License 1.0 (http://opensource.org/licenses/eclipse-1.0.php)
which can be found in the file epl-v10.html at the root of this
distribution. By using this software in any fashion, you are
agreeing to be bound by the terms of this license. You must
not remove this notice, or any other, from this software.


Fipp
----

Copyright © 2015 Brandon Bloom
Distributed under the Eclipse Public License, the same as Clojure.


Google Closure Compiler JS
--------------------------

Copyright © 2017 The Closure Compiler Authors

Licensed under the Apache License, Version 2.0 (the \\"License\\"); you may not use
this file except in compliance with the License. You may obtain a copy of the
License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed
under the License is distributed on an \\"AS IS\\" BASIS, WITHOUT WARRANTIES OR
CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.


JSZip
-----

Copyright (c) 2009-2016 Stuart Knightley, David Duponchel, Franz Buchinger,
Antonio Afonso
MIT License


Node.js
-------

Copyright Node.js contributors. All rights reserved.
MIT License


node-getopt
-----------

Copyright (c) 2013, Joyent, Inc. All rights reserved.
MIT License


lazy-map
--------

Copyright (c) 2015 Artur Malabarba
Distributed under the Eclipse Public License either version 1.0 or (at your
option) any later version.


Paredit.js
--------

Copyright (c) 2015 Robert Krahn
MIT License


Transit
------

Copyright © 2014 Cognitect

Licensed under the Apache License, Version 2.0 (the \\"License\\"); you may not use
this file except in compliance with the License. You may obtain a copy of the
License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed
under the License is distributed on an \\"AS IS\\" BASIS, WITHOUT WARRANTIES OR
CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
",
  ],
]
`;
